--- a/Finalproject/html.html
+++ b/Finalproject/html.html
@@ -3,11 +3,22 @@
 <html>
 <title>Final Scores</title><br>
 <h1 class = 'center' style = 'font-size:30px;'><u>Final Scores</u></h1><br>
-<div id = 'p1Div' class = 'center'>
+<h1 class = 'center' style = 'font-size:40px;'>r Won!</h1>
+<div id = 'p1Div' class = 'floatL'>
 <h1 id = 'p1Header' class = 'center'>b's Scores</h1><br>
-<h1 class = 'center'>Final Score: 4</h1><br>
-<h1 class = 'center'>Time Round 1: 7</h1><br>
-<h1 class = 'center'>Time Round 2: 6</h1><br>
-<h1 class = 'center'>Time Round 3: 47</h1><br>
-<h1 class = 'center'>Time Round 4: 18</h1><br>
-<h1 class = 'center'>Final Time: 78 seconds</h1><br>
+<h1 class = 'center'>Final Score: 2</h1><br>
+<h1 class = 'center'>Time Round 1: 19</h1><br>
+<h1 class = 'center'>Time Round 2: 14</h1><br>
+<h1 class = 'center'>Time Round 3: 22</h1><br>
+<h1 class = 'center'>Time Round 4: 28</h1><br>
+<h1 class = 'center'>Final Time: 83 seconds</h1><br>
+</div>
+<div id = 'p2Div' class = 'floatR'>
+<h1 id = 'p2Header' class = 'center'>r's Scores</h1><br>
+<h1 class = 'center'>Final Score: 3</h1><br>
+<h1 class = 'center'>Time Round 1: 8</h1><br>
+<h1 class = 'center'>Time Round 2: 5</h1><br>
+<h1 class = 'center'>Time Round 3: 13</h1><br>
+<h1 class = 'center'>Time Round 4: 48</h1><br>
+<h1 class = 'center'>Final Time: 74 seconds</h1><br>
+</div>
